--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             /></a>
           </div>
         </div>
-        <div class="my">
+        <div id="myHuman" class="my">
           <div id="my_img" class="my_img"></div>
         </div>
       </div>
