--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
           <div class="about_content">
             <!-- 看板 -->
             <div class="Kanban">
-              <h1>一位對程式設計充滿熱情的新手。</h1>
-              <h1>
+              <p>一位對程式設計充滿熱情的新手。</p>
+              <p>
                 喜歡透過程式碼來創造美觀且實用的網頁，並且享受解決問題和學習新技術的過程。
-              </h1>
+              </p>
             </div>
             <div class="pole"></div>
           </div>
@@ -100,27 +100,27 @@
                 <div class="leave_text">
                   <div class="apple">
                     <div class="petiole"></div>
-                    <h2 class="text">HTML</h2>
+                    <p class="text">HTML</p>
                   </div>
                   <div class="apple">
                     <div class="petiole"></div>
-                    <h2 class="text">CSS</h2>
+                    <p class="text">CSS</p>
                   </div>
                   <div class="apple">
                     <div class="petiole"></div>
-                    <h2 class="text">JavaScript</h2>
+                    <p class="text">JavaScript</p>
                   </div>
                   <div class="apple">
                     <div class="petiole"></div>
-                    <h2 class="text">React</h2>
+                    <hp class="text">React</hp>
                   </div>
                   <div class="apple">
                     <div class="petiole"></div>
-                    <h2 class="text">PHP</h2>
+                    <p class="text">PHP</p>
                   </div>
                   <div class="apple">
                     <div class="petiole"></div>
-                    <h2 class="text">Node.js</h2>
+                    <p class="text">Node.js</p>
                   </div>
                 </div>
               </div>
@@ -220,9 +220,9 @@
             </div>
           </div>
           <div class="github">
-            <a href="https://github.com/f9471206" target="_blank"
-              ><img src="./image/github.png" alt=""
-            /></a>
+            <a href="https://github.com/f9471206" target="_blank">
+              <img src="./image/github.png" alt="" />
+            </a>
           </div>
         </div>
         <div id="myHuman" class="my">
