--- a/index.html
+++ b/index.html
@@ -25,12 +25,26 @@
       <div class="sun"></div>
       <div class="moon"></div>
     </section>
+    <section class="hint">
+      <div class="mouse">
+        <img src="./image/mouse.svg" alt="" />
+        <div class="miuse_wheel"></div>
+        <dir class="arrow"><img src="./image/arrow.svg" alt="" /></dir>
+      </div>
+      <div class="keyboard">
+        <div class="left">
+          <img src="./image/one_arrow.svg" alt="" />
+        </div>
+        <div class="right">
+          <img src="./image/one_arrow.svg" alt="" />
+        </div>
+      </div>
+    </section>
     <div class="page">
       <div class="content">
         <div class="about">
           <div class="text">
-            <h1>Hi</h1>
-            <h1>I am YO HUA</h1>
+            <img src="./image/name.svg" alt="" />
           </div>
           <div class="tree_1">
             <div class="tree_a">
@@ -92,6 +106,7 @@
           <div id="small_tree" class="small_tree">
             <img src="./image/small_tree.svg" alt="" />
             <div id="circle" class="circle"></div>
+            <p class="small_tree_text">click</p>
           </div>
           <div class="skill_tree">
             <div class="leaves">
@@ -151,12 +166,16 @@
                 </ul>
                 <div class="links">
                   <div class="link">
-                    <a href="#javascript;"
+                    <a
+                      href="https://web-project-static.onrender.com/"
+                      target="_blank"
                       ><img src="./image/link.png" alt=""
                     /></a>
                   </div>
                   <div class="link">
-                    <a href="#javascript;"
+                    <a
+                      href="https://github.com/f9471206/web-project-static"
+                      target="_blank"
                       ><img src="./image/github.png" alt=""
                     /></a>
                   </div>
@@ -175,12 +194,14 @@
                 </ul>
                 <div class="links">
                   <div class="link">
-                    <a href="#javascript;"
+                    <a target="_blank" href="http://digital112-1-11.42web.io/"
                       ><img src="./image/link.png" alt=""
                     /></a>
                   </div>
                   <div class="link">
-                    <a href="#javascript;"
+                    <a
+                      target="_blank"
+                      href="https://github.com/f9471206/gamebox-porject"
                       ><img src="./image/github.png" alt=""
                     /></a>
                   </div>
@@ -191,6 +212,7 @@
           <div id="ship" class="ship ship_left">
             <div id="ship_img" class="ship_img"></div>
           </div>
+          <div class="fishingRod"></div>
           <div id="water" class="water"></div>
         </div>
         <div class="house_page">
