--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
       <div class="sun"></div>
       <div class="moon"></div>
     </section>
+    <div class="progress_bar">
+      <div class="progress_arrow">
+        <div class=""></div>
+        <div class=""></div>
+      </div>
+      <div class="steps">
+        <span id="progress_circle" class="circle active">Home</span>
+        <span id="progress_circle" class="circle">About</span>
+        <span id="progress_circle" class="circle">Skill</span>
+        <span id="progress_circle" class="circle">Project</span>
+        <span id="progress_circle" class="circle">contant</span>
+        <div class="progress">
+          <dir class="indicator"></dir>
+        </div>
+      </div>
+    </div>
     <section class="hint">
       <div class="mouse">
         <img src="./image/mouse.svg" alt="" />
@@ -216,6 +232,15 @@
           <div id="water" class="water"></div>
         </div>
         <div class="house_page">
+          <!-- 看板 -->
+          <div id="final" class="page_title">
+            <div class="Kanban_main">
+              <div class="Kanban">
+                <p>contant</p>
+              </div>
+              <div class="pole"></div>
+            </div>
+          </div>
           <div class="house">
             <div id="bed" class="bed">
               <div id="bed_img" class="bed_img"></div>
