--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div class="contents">
             <div class="project">
               <div class="img">
-                <img src="./image/project_1.png" alt="" />
+                <img src="./image/tweet.png" alt="" />
               </div>
               <div class="pro_content">
                 <h3>社群貼文作品</h3>
@@ -183,14 +183,14 @@
                 <div class="links">
                   <div class="link">
                     <a
-                      href="https://web-project-static.onrender.com/"
+                      href="https://web-project-client-q47y.onrender.com"
                       target="_blank"
                       ><img src="./image/link.png" alt=""
                     /></a>
                   </div>
                   <div class="link">
                     <a
-                      href="https://github.com/f9471206/web-project-static"
+                      href="https://github.com/f9471206/web-project-client"
                       target="_blank"
                       ><img src="./image/github.png" alt=""
                     /></a>
